refactor(executor): read the remaining capture and artifact answers as records
An artifact page's encoding bound, a binary capture's single file and the
optional captures' absent list now come from the records that carry them.
The path-selection reader they shared has no caller left and is removed.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>